--- a/login.html
+++ b/login.html
@@ -63,7 +63,7 @@
   <div class="w3-container w3-twothird  w3-margin-top"
     style="padding-top: 10rem; padding-left: 20%; padding-bottom: 5em;">
 
-    <form class="w3-container w3-card-4" action="#" onsubmit="postLogin(this)" method="POST">
+    <form class="w3-container w3-card-4" action="index.html" onsubmit="postLogin(this)" method="POST">
 
       <p>
         <label>Username </label>
