--- a/home.html
+++ b/home.html
@@ -199,7 +199,7 @@
     <p class="w3-medium">Powered by <a href="aboutus.html" target="_blank">Group 3</a></p>
   </footer>
 </body>
-<script src="js/main.js"></script>
+<script src="js/main.js" type="text/JavaScript"></script>
 <script>
   checkAuth()
 function postRegister(self) {
